- Fixed apply button event target usage. - Fixed Chrome-specific layout problems (table column minimum width, button height matching, etc).

--- a/hitcomp/styles/hitcomp.css
+++ b/hitcomp/styles/hitcomp.css
@@ -134,6 +134,21 @@ div.content-loading {
     font-style: italic;
 }
 
+button.form-control,
+input.form-control {
+    width: inherit;
+    height: inherit;
+}
+
+ul.dropdown-menu {
+    padding: 5px;
+}
+
+label.checkbox {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
 div.tooltip-content,
 div#content-tabs,
 div#content-tabs div.content-tab div.content-localize,
@@ -157,6 +172,10 @@ div#content-tabs div.content-tab div.content-filter div.input-group-sm:first-of-
     margin-bottom: 10px;
 }
 
+div#content-tabs div.content-tab div.content-filter div.input-group-sm div.btn-group button.form-control {
+    height: 30px;
+}
+
 div#content-tabs div.content-tab div.content-localize div.input-group-sm > label,
 div#content-tabs div.content-tab div.content-filter div.input-group-sm > label {
     width: 150px;
@@ -165,28 +184,9 @@ div#content-tabs div.content-tab div.content-filter div.input-group-sm > label {
     font-size: 13px;
 }
 
-button.form-control,
-input.form-control {
-    width: inherit;
-    height: auto;
-}
-
-ul.dropdown-menu {
-    padding: 5px;
-}
-
-label.checkbox {
-    margin-top: 2px;
-    margin-bottom: 2px;
-}
-
-div#content-tabs div.content-tab div.content-data table.table colgroup col {
-    width: auto;
-    min-width: 135px;
-}
-
 div#content-tabs div.content-tab div.content-data table.table thead tr th,
 div#content-tabs div.content-tab div.content-data table.table tbody tr td {
+    min-width: 135px;
     vertical-align: middle;
 }
 
